--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.olastandard.appforseniors">
 
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +14,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <!--<receiver android:name=".MessagerListActivity">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.provider.Telephony.SMS_RECEIVED"/>-->
+            <!--</intent-filter>-->
+        <!--</receiver>-->
+
         <activity android:name=".MainActivity" />
         <activity android:name=".ManuActivity">
             <intent-filter>
@@ -18,7 +29,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ExampleActivity" />
-        <activity android:name=".smsActivitys.messagerActivity"></activity>
+        <activity android:name=".smsActivitys.MessagerActivity" />
+        <activity android:name=".smsActivitys.MessagerListActivity"></activity>
     </application>
 
 </manifest>
