--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:allowBackup="true"
@@ -14,11 +14,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!--<receiver android:name=".MessagerListActivity">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.provider.Telephony.SMS_RECEIVED"/>-->
-            <!--</intent-filter>-->
-        <!--</receiver>-->
+
+        <!-- <receiver android:name=".MessagerListActivity"> -->
+        <!-- <intent-filter> -->
+        <!-- <action android:name="android.provider.Telephony.SMS_RECEIVED"/> -->
+        <!-- </intent-filter> -->
+        <!-- </receiver> -->
 
         <activity android:name=".MainActivity" />
         <activity android:name=".ManuActivity">
@@ -30,7 +31,8 @@
         </activity>
         <activity android:name=".ExampleActivity" />
         <activity android:name=".smsActivitys.MessagerActivity" />
-        <activity android:name=".smsActivitys.MessagerListActivity"></activity>
+        <activity android:name=".smsActivitys.MessagerListActivity" />
+        <activity android:name=".smsActivitys.NewSmsActivity"></activity>
     </application>
 
 </manifest>
