--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
 
     <application
         android:allowBackup="true"
@@ -25,9 +26,11 @@
         <activity android:name=".ExampleActivity" />
         <activity android:name=".Contacts.ContactTypeActivity" />
         <activity android:name=".Contacts.ContactListActivity"></activity>
+        <activity android:name=".Contacts.AddContactActivity"></activity>
         <activity android:name=".smsActivitys.MessagerActivity" />
         <activity android:name=".smsActivitys.MessagerListActivity" />
         <activity android:name=".smsActivitys.NewSmsActivity"></activity>
+
     </application>
 
 </manifest>
