--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.olastandard.appforseniors">
+
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -24,20 +27,17 @@
             </intent-filter>
         </activity>
         <activity android:name=".ExampleActivity" />
-
         <activity android:name=".Contacts.ContactTypeActivity" />
-        <activity android:name=".Contacts.ContactListActivity"></activity>
-        <activity android:name=".Contacts.AddContactActivity"></activity>
-        <activity android:name=".Contacts.EditContactActivity"></activity>
-        
+        <activity android:name=".Contacts.ContactListActivity" />
+        <activity android:name=".Contacts.AddContactActivity" />
+        <activity android:name=".Contacts.EditContactActivity" />
         <activity android:name=".smsActivitys.MessagerActivity" />
         <activity android:name=".smsActivitys.MessagerListActivity" />
-        <activity android:name=".smsActivitys.NewSmsActivity"></activity>
-
+        <activity android:name=".smsActivitys.NewSmsActivity" />
         <activity android:name=".LinksActivity" />
-        <activity android:name=".AddLinkActivity"></activity>
+        <activity android:name=".AddLinkActivity" />
+        <activity android:name=".PushDialogActivity.PushDialog" ></activity>
 
     </application>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 </manifest>
