--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.olastandard.appforseniors">
+
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -23,18 +28,19 @@
             </intent-filter>
         </activity>
         <activity android:name=".ExampleActivity" />
-
         <activity android:name=".Contacts.ContactTypeActivity" />
-        <activity android:name=".Contacts.ContactListActivity"></activity>
+        <activity android:name=".Contacts.ContactListActivity" />
         <activity android:name=".smsActivitys.MessagerActivity" />
         <activity android:name=".smsActivitys.MessagerListActivity" />
-        <activity android:name=".smsActivitys.NewSmsActivity"></activity>
-
+        <activity android:name=".smsActivitys.NewSmsActivity" />
+        <activity android:name=".AlarmClock.AlarmMenuActivity" />
         <activity android:name=".LinksActivity" />
-        <activity android:name=".AddLinkActivity"></activity>
+        <activity android:name=".AddLinkActivity" />
 
+        <receiver android:name=".AlarmClock.AlarmReceiver" />
+
+        <activity android:name=".AlarmClock.ClockListActivity" />
+        <activity android:name=".AlarmClock.NewAlarmActivity"></activity>
     </application>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
 </manifest>
