--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBOsHFmIjpVv41mG7YZPV_7ZaQtQkz3mC8" />
 
-        <activity android:name=".Navigation.Navigation_List_Activity"></activity>
+        <activity android:name=".Navigation.NavigationListActivity"></activity>
     </application>
 
 </manifest>
