repair android get comint sms'es when app is no default

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,23 +72,15 @@
 
         <receiver
             android:name=".smsActivitys.smsHelperClassess.SmsReceiver"
-            android:permission="android.permission.BROADCAST_SMS">
+            android:permission="android.permission.BROADCAST_SMS"
+            android:enabled="true"
+            android:exported="true">
             <intent-filter android:priority="1000">
                 <action android:name="android.provider.Telephony.SMS_DELIVER" />
-                <!-- <action android:name="android.provider.Telephony.SMS_RECEIVED" -->
-
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
 
-        <!-- <receiver -->
-        <!-- android:name=".smsActivitys.smsHelperClassess.SmsReceiver" -->
-        <!--  -->
-        <!-- android:enabled="true" -->
-        <!-- android:exported="true"> -->
-        <!-- <intent-filter android:priority="1000"> -->
-        <!-- <action android:name="android.provider.Telephony.SMS_RECEIVED" /> -->
-        <!-- </intent-filter> -->
-        <!-- </receiver> -->
         <receiver
             android:name=".smsActivitys.smsHelperClassess.MmsReceiver"
             android:permission="android.permission.BROADCAST_WAP_PUSH">
