--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.google.android.gms:play-services-places:16.0.0'
+    implementation 'com.android.support:design:26.1.0'
 
     implementation 'com.android.support:cardview-v7:26.1.0'
 
