--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
-    <uses-feature android:name="android.hardware.location.gps" />
 
     <application
         android:allowBackup="true"
@@ -56,6 +52,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBOsHFmIjpVv41mG7YZPV_7ZaQtQkz3mC8" />
 
+        <activity android:name=".Navigation.EditNavigationPlaceActivity"></activity>
     </application>
 
 </manifest>
