--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission
-        android:name="android.permission.VIBRATE"></uses-permission>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <uses-feature android:name="android.hardware.location.gps" />
 
     <application
@@ -65,12 +65,14 @@
         <activity android:name=".AddLinkActivity" />
         <activity android:name=".AlarmClock.ClockListActivity" />
         <activity android:name=".AlarmClock.NewAlarmActivity" />
+
         <receiver android:name=".AlarmClock.LinksClockActivity" />
         <receiver android:name=".AlarmClock.AlarmReceiver" />
-        <receiver android:name=".SampleBootReceiver"
+        <receiver
+            android:name=".SampleBootReceiver"
             android:enabled="true">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"></action>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
 
@@ -120,8 +122,9 @@
 
         <activity android:name=".VoiceNotes.VoiceNotesList" />
         <activity android:name=".VoiceNotes.AddVoiceNoteActivity" />
-        <activity android:name=".VoiceNotes.EditVoiceNoteActivity"></activity>
-
+        <activity android:name=".VoiceNotes.EditVoiceNoteActivity" />
+        <activity android:name=".AlarmClock.AlarmActivity" />
+        <activity android:name=".AlarmClock.ListClock2Activity"></activity>
     </application>
 
 </manifest>
