--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -129,6 +129,10 @@
         <activity
             android:name=".AlarmClock.RWAlarmListActivity"
             android:label="@string/title_activity_rwalarm_list"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".EditLinkActivity"
+            android:label="@string/title_activity_edit_link"
             android:theme="@style/AppTheme"></activity>
     </application>
 
